Fix null handling in exclusion matcher test